full width search box on mobile FIX

--- a/src/common_components/NavBar.css
+++ b/src/common_components/NavBar.css
@@ -165,6 +165,7 @@
   align-items: center;
   color: #888;
   margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 .NavBar .close-search-btn:hover {
   cursor: pointer;
@@ -559,6 +560,11 @@
     z-index: 10002;
     margin-left: 1rem;
     margin-right: 1rem;
+    justify-content: space-between;
+  }
+
+  .NavBar .search-box-content {
+    width: 100%;
   }
 
   .NavBar .search-suggestion-box {
